pipeline/pipeline-trig.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-pipeline
spec:
  to:
    kind: Service
    name: el-pipeline-gitlab-listener-interceptor
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
  wildcardPolicy: None
